Changelog for Shake

    #4, add a lock file to stop corrupting databases
0.15.5
    #279, make usingConfigFile do a need on the config file
    Fix a bug where predicted progress could sometimes be ??
    #264, make the the suite more less non-deterministic
0.15.4
    Undo a locally modified file
0.15.3
    #254, in staunch mode, print out all exceptions
    Require extra-1.3
    #259, discount time waiting for a resource in profiles
    #252, have the docs test configure not in dist
0.15.2
    #248, add another example of using cmd
    #245, initial support for fsatrace lint checking
    Reexport -<.> from filepath where available
    Hoogle #106, trigger on filepath version, not GHC version
    Add AddEnv and AddPath command options
    #243, close fds in child processes when spawning commands
    Make Ninja variable handling more accurate
0.15.1
    If you have Shakefile.hs, pass it all arguments without interp
    Add shakeArgsPrune and shakeArgsPruneWith
    #228, allow running cmd async by collecting the ProcessHandle
    Make getShakeOptions/processorCount of 0 return the used value
    #212, document how to get a full terminal with cmd
    #225, warn if there are no want/action statements
    #232, don't ignore phony order-only dependencies in Ninja
    #226, add escaping for GraphViz labels
    #227, add StdinBS for passing a bytestring as Stdin
    Make cmd Timeout call terminateProcess as well
0.15
    #203, make shakeFiles a directory rather than a file prefix
    #220, add getHashedShakeVersion helper
    #220, add shakeVersionIgnore to ignore version numbers
    #219, run Shakefile.hs from the shake binary
    #218, fix issues with incorrect unchanging with no digests
    #218, fix issue with ChangeModtimeAndDigest on unchanging files
    #216, work around GHC 7.10 RC3 bug 10176
    #213, add phonys, a predicate phony rule
    Add CmdTime and CmdLine results to cmd/command
    Fix parseMakefile for words with multiple escapes in them